samples/_failures_safe/1761256122_92368b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c9f661c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4c9f661c.c:157:13: error: expected expression at end of input
  157 |             token.line =
      |             ^~~~~
./samples/SAFE/__tmp_4c9f661c.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c9f661c.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c9f661c.c:157:13: error: expected declaration or statement at end of input
